--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -850,9 +850,14 @@ main.login .cloud:before {
 }
 .carousel-wrapper .red-background {
   background-color: var(--primary-clr-red);
+  background-image: url(../img/star-red.gif);
+  background-size: cover;
+  background-position: center;
 }
 .carousel-wrapper .black-background {
-  background-color: #38383f;
+  background-image: url(../img/star.gif), linear-gradient(to right, #020000, #046a8b, #020000);
+  background-size: cover;
+  background-position: center;
 }
 
 .carousel-item {
