--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -1563,11 +1563,21 @@ div.mangaPage {
 }
 
 .also-liked {
-  h2 {
+
+  figure{
+    display: flex;
+    align-items: center;
+    img{
+      width: 10vh;
+      margin-left: 1rem;
+    }
+      h2 {
     margin: 2vh 0;
     font-family: var(--ff-bangers);
     letter-spacing: var(--letter-spacing);
   }
+  }
+
 
   .also-liked-contain {
     display: flex;
@@ -1577,7 +1587,18 @@ div.mangaPage {
     font-size: 1.2rem;
 
     figure {
-      width: 20vh;
+      width: 100%;
+      &:hover {
+        a{
+          filter: brightness(0.5);
+        }
+      }
+      a {
+        transition: all 0.3s ease;
+        img{
+          width: 20vh;
+        }
+      }
     }
   }
 }
