--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -94,6 +94,12 @@ body.dark-mode {
   background-color: #202024;
   color: white;
 
+  .container-homepage {
+    background-image: url(../img/vignette.svg);
+    background-color: #202024;
+    background-blend-mode: overlay;
+  }
+
   label {
     color: #0e0e0e;
   }
