--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -87,6 +87,16 @@ body.dark-mode {
   background-color: #202024;
   color: white;
 }
+body.dark-mode #username-picture a:first-child {
+  font-family: var(--ff-barlow);
+  margin-right: 1vh;
+  color: var(--fc-light);
+  font-size: 1.4rem;
+  transition: all 0.3s ease;
+}
+body.dark-mode #username-picture a:first-child:hover {
+  color: #cc392b;
+}
 body.dark-mode .container-homepage {
   background-image: url(../img/vignette.svg);
   background-color: #202024;
