--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -94,6 +94,20 @@ body.dark-mode {
   background-color: #202024;
   color: white;
 
+  .menu-desktop {
+
+    figure:nth-of-type(3) a img {
+      transition: all 0.3s ease;
+      &:hover {
+        box-shadow: 0 5px 10px rgba(255, 255, 255, 0.1), 0 3px 3px rgba(236, 236, 236, 0.1);
+      }
+    }
+  }
+
+  .review{
+    background-color: #202024;
+    color: white;
+  }
   #username-picture{
     a:first-child {
       font-family: var(--ff-barlow);
@@ -107,7 +121,7 @@ body.dark-mode {
   }
   }
 
-  .container-homepage {
+  .container-homepage, .la-page-manga, section.see-volume {
     background-image: url(../img/vignette.svg);
     background-color: #202024;
     background-blend-mode: overlay;
@@ -1486,6 +1500,9 @@ div.mangaPage {
 }
 
 .review {
+  background-color: #f2ebe8;
+  border: 2px solid #cc382b54;
+  border-radius: 5px;
   width: 90%;
   display: grid;
   place-self: center;
@@ -1624,7 +1641,7 @@ div.mangaPage {
 
 .see-volume {
   .all-volume {
-    margin-top: 5vh;
+    padding: 2rem 0;
     display: flex;
 
     h2 {
@@ -2491,6 +2508,7 @@ button:hover {
 
         ul{
           overflow: hidden;
+          transition: all 0.3s ease;
           li {
           width: 100%;
           padding: 8px 12px;
@@ -3518,3 +3536,12 @@ form {
     margin: 20px;
   }
 }
+
+.la-page-manga, section.see-volume{
+  background-image: url(../img/vignette.svg);
+  background-color: rgba(242, 235, 232, 0.8901960784);
+  background-blend-mode: overlay;
+
+
+}
+
