--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -2301,18 +2301,66 @@ button:hover {
 ***********kakoii mode***********
 *******************************
 */
+
+// .headkakkoii {
+//   height: 60vh;
+//   background: url(../img/kakoii.svg) no-repeat center center/cover;
+//   width: 100%;
+// }
   .formkakoii {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: url(../img/cerisier.gif) ;
+    background-color: rgba(242, 235, 232, 0.507);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
+
+  
+  // .headkakkoii {
+  //   width: 100%;
+  //   height: auto;
+  // }
+  main#kakkoii{
+    width: 90vh;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    h1{
+      font-size: 3rem;
+    }
+    .wrapper{
+      p{
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+    }
+    .kakkoiiflex{
+      .center{
+        width: 30vh;
+        border: solid 4px white;
+        h2{
+          font-size: 2rem;
+          margin-bottom: 1rem;
+        }
+        p{
+          font-size: 1.5rem;
+          margin-bottom: 1rem;
+        }
+        .open-popup{
+          width: 100%;
+        }
+      }
+    }
+  }
+
   .headkakkoii {
-    width: 100%;
-    height: auto;
-  }
-  .kakkoii {
-    width: 70vh;
+    display: none;
   }
 }
 
