--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kaisei+Tokumin&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kaisei+Tokumin&family=Permanent+Marker&display=swap");
 /*
 **********************************
 ***********RESET CSS************
@@ -2040,8 +2041,11 @@ button:hover {
     font-size: 3rem;
   }
   main#kakkoii .wrapper p {
+    font-family: "Permanent Marker", cursive;
+    color: #38383f;
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    padding-left: 1rem;
   }
   main#kakkoii .kakkoiiflex .center {
     width: 30vh;
