--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kaisei+Tokumin&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kaisei+Tokumin&family=Permanent+Marker&display=swap');
 
 /*
 **********************************
@@ -2321,10 +2322,6 @@ button:hover {
   }
 
   
-  // .headkakkoii {
-  //   width: 100%;
-  //   height: auto;
-  // }
   main#kakkoii{
     width: 90vh;
     height: 90vh;
@@ -2336,8 +2333,11 @@ button:hover {
     }
     .wrapper{
       p{
+        font-family: 'Permanent Marker', cursive;
+        color: #38383f;
         font-size: 1.5rem;
         margin-bottom: 1rem;
+        padding-left: 1rem;
       }
     }
     .kakkoiiflex{
