--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -2638,6 +2638,10 @@ form fieldset label input[type=checkbox] {
 .kakkoii .form-group {
   padding: 10px;
 }
+.kakkoii .kakkoiiflex .center {
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(20px); /* Position initiale en dehors de l'écran */
+}
 
 @media (min-width: 2560px) {
   div.slider div.slider-wrapper div.manga {
@@ -2921,4 +2925,74 @@ form fieldset label input[type=checkbox] {
 }
 .pagecart .gap {
   margin: 20px;
+}
+
+/*
+**********************************
+***************ABOUT US***********
+**********************************
+*/
+body {
+  overflow: hidden; /* Empêche la barre de défilement */
+  margin: 0; /* Retire les marges par défaut du body */
+}
+
+.aboutus {
+  position: relative; /* Permet aux nuages d'être positionnés par rapport à cette section */
+  height: 100vh; /* Prend toute la hauteur de la fenêtre */
+  overflow: hidden; /* Empêche le débordement */
+  background-color: #f9f9f9; /* Couleur de fond */
+  margin: 20px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  font-family: Arial, sans-serif;
+}
+.aboutus h1 {
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+  font-size: 2rem;
+  color: #e00e0e;
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+}
+.aboutus h2 {
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+  font-size: 1.5rem;
+  color: #070707;
+  margin: 20px;
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+}
+.aboutus p {
+  font-family: var(--ff-barlow);
+  font-size: 1.5rem;
+  color: #070707;
+  margin: 20px;
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+}
+.aboutus section {
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.aboutus .flexcenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+}
+.aboutus .cloud {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background: url("../img/Akatsuki-Logo.png") no-repeat center center;
+  background-size: contain;
+  opacity: 1;
 }/*# sourceMappingURL=styles.css.map */
