--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -1403,6 +1403,66 @@ button {
 **********************************
 */
 
+.holo-effect::before,
+.holo-effect::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-repeat: no-repeat;
+  mix-blend-mode: color-dodge;
+  transition: all 0.33s ease;
+  pointer-events: none;
+}
+
+.holo-effect::before {
+  background-position: 50% 50%;
+  background-size: 400% 400%;
+  background-image: linear-gradient(
+    115deg,
+    transparent 0%,
+    rgb(0, 231, 255) 25%,
+    transparent 47%,
+    transparent 53%,
+    rgb(255, 0, 231) 75%,
+    transparent 100%
+  );
+  opacity: 0.7;
+  filter: brightness(0.4) contrast(1.5);
+  z-index: 1;
+}
+
+.holo-effect::after {
+  opacity: 0.9;
+  background-image: url("https://assets.codepen.io/13471/sparkles.gif"),
+    url(https://assets.codepen.io/13471/holo.png),
+    linear-gradient(125deg, 
+      #ff008450 15%, 
+      #fca40040 30%, 
+      #ffff0030 40%, 
+      #00ff8a20 60%, 
+      #00cfff40 70%, 
+      #cc4cfa50 85%);
+  background-position: 50% 50%;
+  background-size: 180%;
+  background-blend-mode: overlay;
+  z-index: 2;
+  filter: brightness(1) contrast(1);
+}
+
+.holo-effect:hover::before {
+  background-size: 250% 250%;
+  opacity: 1;
+  filter: brightness(0.6) contrast(1.7);
+}
+
+.holo-effect:hover::after {
+  opacity: 1;
+}
+
+
 div.mangaPage {
   position: relative;
   width: 100%;
@@ -3592,4 +3652,5 @@ form {
 
 
 }
+
 
