--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -1573,6 +1573,7 @@ div.mangaPage {
   padding: 2vh 1vw;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+  background-color: #F1EBE8;
 
   h2 {
     margin-top: 2vh;
@@ -1583,7 +1584,7 @@ div.mangaPage {
 
   hr {
     margin: 2vh 0;
-    width: 80%;
+    width: 100%;
   }
 
   .cadre-review {
