--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -212,6 +212,17 @@ svg {
   outline: none;
 }
 
+.loginbutton {
+  background-color: #cc392b;
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+  margin: 10px;
+  padding: 10px 20px;
+}
+.loginbutton:hover {
+  background-color: #fd1702;
+}
+
 /*
 **********************************
 ***********MENU BURGER************
@@ -354,6 +365,10 @@ footer > p {
 ***********LOGIN/REGISTER*********
 **********************************
 */
+.login {
+  margin-top: 20px;
+}
+
 .connexion,
 .login {
   display: flex;
@@ -481,6 +496,10 @@ footer > p {
 *************REGISTER*************
 **********************************
 */
+.connexion {
+  margin-top: 20px;
+}
+
 main.connexion,
 main.login {
   /* Cloud Objects */
@@ -2311,6 +2330,11 @@ button:hover {
     display: flex;
     justify-content: center;
   }
+  /*
+  **********************************
+  ***************ABOUT US***********
+  **********************************
+  */
 }
 @media (min-width: 1440px) {
   /*
@@ -2350,6 +2374,11 @@ button:hover {
   div.headdashboard {
     height: 70vh;
   }
+  /*
+  **********************************
+  ***************ABOUT US***********
+  **********************************
+  */
 }
 /*
 **********************************
@@ -2932,16 +2961,11 @@ form fieldset label input[type=checkbox] {
 ***************ABOUT US***********
 **********************************
 */
-body {
-  overflow: hidden; /* Empêche la barre de défilement */
-  margin: 0; /* Retire les marges par défaut du body */
-}
-
 .aboutus {
-  position: relative; /* Permet aux nuages d'être positionnés par rapport à cette section */
-  height: 100vh; /* Prend toute la hauteur de la fenêtre */
-  overflow: hidden; /* Empêche le débordement */
-  background-color: #f9f9f9; /* Couleur de fond */
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  background-color: #f9f9f9;
   margin: 20px;
   padding: 20px;
   background-color: #f9f9f9;
@@ -2952,8 +2976,8 @@ body {
   letter-spacing: var(--letter-spacing);
   font-size: 2rem;
   color: #e00e0e;
-  opacity: 0; /* Initialement invisible */
-  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+  opacity: 0;
+  transform: translateY(-50px);
 }
 .aboutus h2 {
   font-family: var(--ff-bangers);
@@ -2961,16 +2985,16 @@ body {
   font-size: 1.5rem;
   color: #070707;
   margin: 20px;
-  opacity: 0; /* Initialement invisible */
-  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+  opacity: 0;
+  transform: translateY(-50px);
 }
 .aboutus p {
   font-family: var(--ff-barlow);
   font-size: 1.5rem;
   color: #070707;
   margin: 20px;
-  opacity: 0; /* Initialement invisible */
-  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+  opacity: 0;
+  transform: translateY(-50px);
 }
 .aboutus section {
   max-width: 800px;
@@ -2985,8 +3009,8 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  opacity: 0; /* Initialement invisible */
-  transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+  opacity: 0;
+  transform: translateY(-50px);
 }
 .aboutus .cloud {
   position: absolute;
