--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -260,6 +260,20 @@ svg {
     }
   }
 }
+.loginbutton{
+  background-color: #cc392b;
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+  margin: 10px;
+  padding: 10px 20px;
+  &:hover{
+    background-color: #fd1702;
+  }
+}
+  
+
+
+
 
 /*
 **********************************
@@ -423,6 +437,9 @@ footer > p {
 ***********LOGIN/REGISTER*********
 **********************************
 */
+.login{
+  margin-top: 20px;
+}
 
 .connexion,
 .login {
@@ -546,6 +563,9 @@ footer > p {
 *************REGISTER*************
 **********************************
 */
+.connexion{
+  margin-top: 20px;
+}
 
 main.connexion,
 main.login {
@@ -2148,6 +2168,7 @@ button:hover {
 
   .form-container {
     width: auto;
+       
 
     h1 {
       font-size: 1.5rem;
@@ -2447,6 +2468,7 @@ button:hover {
     }
   }
 
+
   /*
 **********************************
 ***********DASHBOARD************
@@ -2660,6 +2682,17 @@ button:hover {
     display: flex;
     justify-content: center;
   }
+/*
+**********************************
+***************ABOUT US***********
+**********************************
+*/
+
+
+
+
+
+
 }
 
 @media (min-width: 1440px) {
@@ -2697,6 +2730,7 @@ button:hover {
     display: block;
     width: 60vw;
   }
+  
 
   /*
 **********************************
@@ -2707,6 +2741,14 @@ button:hover {
   div.headdashboard {
     height: 70vh;
   }
+/*
+**********************************
+***************ABOUT US***********
+**********************************
+*/
+
+
+
 }
 
 // * {
@@ -3381,18 +3423,12 @@ form {
 ***************ABOUT US***********
 **********************************
 */
-
-body {
-  overflow: hidden; /* Empêche la barre de défilement */
-  margin: 0; /* Retire les marges par défaut du body */
-}
-
 .aboutus {
- 
- position: relative; /* Permet aux nuages d'être positionnés par rapport à cette section */
-    height: 100vh; /* Prend toute la hauteur de la fenêtre */
-    overflow: hidden; /* Empêche le débordement */
-    background-color: #f9f9f9; /* Couleur de fond */ margin: 20px;
+  position: relative; 
+  height: 100vh; 
+  overflow: hidden; 
+  background-color: #f9f9f9; 
+  margin: 20px;
   padding: 20px;
   background-color: #f9f9f9;
   font-family: Arial, sans-serif;
@@ -3402,8 +3438,8 @@ body {
     letter-spacing: var(--letter-spacing);
     font-size: 2rem;
     color: #e00e0e;
-    opacity: 0; /* Initialement invisible */
-    transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+    opacity: 0; 
+    transform: translateY(-50px); 
   }
 
   h2 {
@@ -3412,8 +3448,8 @@ body {
     font-size: 1.5rem;
     color: #070707;
     margin: 20px;
-    opacity: 0; /* Initialement invisible */
-    transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+    opacity: 0; 
+    transform: translateY(-50px); 
   }
 
   p {
@@ -3421,8 +3457,8 @@ body {
     font-size: 1.5rem;
     color: #070707;
     margin: 20px;
-    opacity: 0; /* Initialement invisible */
-    transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+    opacity: 0; 
+    transform: translateY(-50px); 
   }
 
   section {
@@ -3439,15 +3475,15 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    opacity: 0; /* Initialement invisible */
-    transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+    opacity: 0; 
+    transform: translateY(-50px); 
   }
   .cloud {
     position: absolute;
     width: 100px;
     height: 100px;
-    background: url('../img/Akatsuki-Logo.png') no-repeat center center;
+    background: url("../img/Akatsuki-Logo.png") no-repeat center center;
     background-size: contain;
-    opacity: 1;     
-}
+    opacity: 1;
+  }
 }
