--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -2022,7 +2022,7 @@ button:hover {
   *******************************
   */
   .formulaire {
-    margin: 0 auto;
+    margin: 3rem auto;
   }
 }
 @media (min-width: 768px) {
@@ -2070,7 +2070,7 @@ button:hover {
   *******************************
   */
   .formulaire {
-    margin: 0 auto;
+    margin: 3rem auto;
   }
   /*
   *******************************
@@ -2208,8 +2208,8 @@ button:hover {
   *******************************
   */
   .formulaire {
-    margin: 0 auto;
-    max-width: 24px;
+    margin: 3rem auto;
+    max-width: 1024px;
   }
   /*
   **********************************
@@ -2437,6 +2437,13 @@ button:hover {
   .mangaPage-scd-section .comm-desktop .review .cadre-review {
     width: 60%;
   }
+  #leave-review {
+    justify-content: start;
+    margin: 0 2rem;
+  }
+  #leave-review input {
+    width: 40%;
+  }
   .also-liked {
     width: 50%;
     display: flex;
@@ -2539,19 +2546,20 @@ button:hover {
 .formulaire {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   background-color: #a2eefb;
   border-radius: 10px;
   outline: 3px solid #ffffff;
-  max-width: 600px;
-  margin: 20px;
+  margin: 3rem auto;
+  padding: 4rem;
+  height: 60vh;
 }
 .formulaire h2 {
   text-align: center;
   font-family: var(--ff-bangers);
   margin: 1%;
   color: #ffffff;
-  -webkit-text-stroke: 2px red;
+  -webkit-text-stroke: 1px red;
 }
 .formulaire input,
 .formulaire textarea {
@@ -2567,14 +2575,15 @@ button:hover {
   padding: 1%;
   border-radius: 10px;
   border: none;
-  background-color: #fcc8e1;
+  background-color: #cc1606;
   color: #ffffff;
   font-family: var(--ff-bangers);
   cursor: pointer;
   transition: all ease 0.3s;
 }
 .formulaire .button:hover {
-  background-color: #cc1606;
+  background-color: #ce685f;
+  color: var(--fc-black);
 }
 
 /*
@@ -3217,6 +3226,9 @@ form fieldset label input[type=checkbox] {
   flex-direction: column;
   opacity: 0; /* Initialement invisible */
   transform: translateY(-50px); /* Position initiale en dehors de l'écran */
+}
+.aboutus .flexcenter img {
+  width: 100%;
 }
 .aboutus .cloud {
   position: absolute;
